# doktok-ng

./: .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/doktok_api/: __init__.py  __main__.py  dependencies.py  main.py  metrics.py  ratelimit.py
apps/backend/tests/: test_adjudication.py  test_admin_api.py  test_aggregate_api.py  test_api_token_roles.py  test_audit_actor_api.py  test_audit_api.py  test_audit_coverage.py  test_auth_api.py  test_auth_hardening.py  test_backup_export_api.py  test_backup_restore_api.py  test_caddy_edge_config.py  test_categories_api.py  test_chat_api.py  test_chat_capacity.py  test_chat_graph.py  test_document_detail_api.py  test_document_features_api.py  test_document_file_api.py  test_document_notes_api.py  test_document_rename_api.py  test_documents_api.py  test_documents_list_api.py  test_drp_api.py  test_drp_history_api.py  test_egress_probe_gating.py  test_entities_api.py  test_entity_documents_api.py  test_features_list_api.py  test_health.py  test_host_only_platform.py  test_ingestion_api.py  test_ingestion_upload.py  test_keys_api.py  test_limits_api.py  test_log_event_host_script.py  test_membership_api.py  test_metrics_api.py  test_misc_hardening.py  test_operational_read_gating.py  (+20 more)
apps/mcp/: pyproject.toml
apps/mcp/doktok_mcp/: __init__.py  server.py  tools.py
apps/mcp/tests/: test_mcp_tools.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/doktok_worker/: __init__.py  __main__.py  composition.py  main.py  worker.py
apps/worker/tests/: test_active_tenant_ids.py  test_ner_backend_override.py  test_tenant_resolver.py  test_worker.py
contracts/: pyproject.toml
contracts/doktok_contracts/: __init__.py  errors.py  media.py  ports.py  schemas.py
contracts/tests/: test_backup_portable_contracts.py  test_schemas.py
core/: pyproject.toml
core/doktok_core/: __init__.py  config.py  logging_setup.py  registry.py
core/doktok_core/agent/: __init__.py  loop.py  merge.py  trace.py
core/doktok_core/aggregation/: __init__.py  counting.py  inmemory.py  records.py  router.py  windowing.py
core/doktok_core/audit/: __init__.py  inmemory.py  logger.py
core/doktok_core/backup/: __init__.py  export.py  fingerprint.py  history_anchor.py  restore.py  schema.py
core/doktok_core/categories/: __init__.py  inmemory.py
core/doktok_core/chat/: __init__.py  inmemory.py  memory.py  summary.py  title.py
core/doktok_core/dev/: __init__.py  seed.py
core/doktok_core/documents/: __init__.py  artifacts.py  inmemory.py  repair.py
core/doktok_core/enrichment/: __init__.py  categories.py  evaluation.py  metadata.py  unidentifiable.py
core/doktok_core/entities/: __init__.py  address.py  extractor.py  inmemory.py  language.py  lexical.py  ner.py  validated.py
core/doktok_core/extraction/: __init__.py  judge.py  quality.py  service.py
core/doktok_core/features/: __init__.py  catalog.py  inmemory.py  processors.py  reconciler.py  telemetry.py
core/doktok_core/indexing/: __init__.py  chunker.py  inmemory.py
core/doktok_core/ingestion/: __init__.py  extract_stage.py  inmemory.py  layout.py  pipeline.py  stability.py
core/doktok_core/knowledge_graph/: __init__.py  adjudication.py  alias.py  entity_resolution.py  evaluation.py  inmemory.py  name_parts.py  predicates.py  resolve.py  retrieval.py
core/doktok_core/preferences/: __init__.py  inmemory.py
core/doktok_core/rag/: __init__.py  answerer.py  capabilities.py  evaluation.py  reranker.py
core/doktok_core/security/: __init__.py  auth.py  egress.py  inmemory.py  keys.py  passwords.py  policy.py  roles.py  sessions.py
core/doktok_core/settings/: __init__.py  bootstrap.py  catalog.py  effective.py  inmemory.py  ocr_recommend.py  runtime.py
core/doktok_core/tags/: __init__.py  inmemory.py  normalize.py
core/doktok_core/tenants/: __init__.py  provisioning.py
core/doktok_core/tools/: __init__.py  base.py  library.py
core/doktok_core/visualizations/: __init__.py  inmemory.py  map_service.py  service.py
core/tests/: test_agent_loop.py  test_aggregation.py  test_aggregation_records.py  test_aggregation_router.py  test_alias_folding.py  test_alias_resolution.py  test_artifacts.py  test_audit.py  test_audit_actor.py  test_auth.py  test_backup_export.py  test_backup_restore.py  test_capabilities.py  test_categories.py  test_chat_memory.py  test_chat_summary.py  test_chunker.py  test_config.py  test_counting.py  test_dev_seed.py  test_doc_metadata_feature.py  test_document_activate.py  test_document_repair.py  test_effective_settings.py  test_egress.py  test_embedding_map_service.py  test_embedding_projection_inmemory.py  test_enrichment_evaluation.py  test_enrichment_metadata.py  test_entity_extractor.py  test_entity_graph_feature.py  test_entity_graph_orphan_prune.py  test_entity_pipeline.py  test_entity_resolution.py  test_entity_resolution_eval.py  test_extract_stage.py  test_extraction_limits.py  test_feature_groups.py  test_feature_pipeline.py  test_feature_reconciler.py  (+50 more)
modalities/files/: pyproject.toml
modalities/files/doktok_modalities_files/: __init__.py  extractors.py  mime.py  normalize.py  render.py
providers/gliner/: README.md  pyproject.toml
providers/gliner/doktok_provider_gliner/: __init__.py  adapter.py  relation_adapter.py
providers/gliner/tests/: test_gliner_adapter.py  test_job_title_eval.py  test_relation_adapter.py
providers/ollama/: pyproject.toml
providers/openai/: pyproject.toml
providers/paddleocr/: pyproject.toml
providers/projection/: pyproject.toml
providers/rapidocr/: pyproject.toml
providers/reranker/: pyproject.toml
retrieval/hybrid/: pyproject.toml
storage/filesystem/: pyproject.toml
storage/postgres/: pyproject.toml
tools/builtin/: pyproject.toml
tools/mcp/: pyproject.toml
(+388 files in other folders)
