[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-core"
version = "0.2.0"
description = "DokTok NG core domain logic and configuration"
requires-python = ">=3.12"
dependencies = [
    "doktok-contracts",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langdetect>=1.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["doktok_core"]
