[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-core"
version = "0.2.0"
description = "DokTok NG core domain logic and configuration"
requires-python = ">=3.12"
dependencies = [
    "doktok-contracts",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langdetect>=1.0.9",
    # Pure-Python libphonenumber port for PHONE validation (#518). Lightweight -> normal lockfile
    # dep (unlike libpostal, which is a heavy engine extra; see `make address-libpostal`).
    "phonenumbers>=8.13",
    "nameparser>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["doktok_core"]
