[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-api"
version = "0.1.0"
description = "DokTok NG FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "doktok-core",
    "doktok-contracts",
    "doktok-storage-postgres",
    "doktok-retrieval-hybrid",
    "doktok-provider-ollama",
    "doktok-modalities-files",  # rotate_source for the document-rotate endpoint (PyMuPDF/Pillow)
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["doktok_api"]
