[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-mcp"
version = "0.0.0"
description = "DokTok NG read-only MCP server (placeholder)"
requires-python = ">=3.12"
dependencies = ["doktok-core", "doktok-contracts"]

[tool.hatch.build.targets.wheel]
packages = ["doktok_mcp"]
