[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-mcp"
version = "0.1.0"
description = "DokTok NG read-only MCP server"
requires-python = ">=3.12"
dependencies = [
    "doktok-core",
    "doktok-contracts",
    "doktok-storage-postgres",
    "doktok-provider-ollama",
    "doktok-retrieval-hybrid",
    "mcp>=1.2",
]

[project.scripts]
doktok-mcp = "doktok_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["doktok_mcp"]
