[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-worker"
version = "0.0.0"
description = "DokTok NG ingestion worker"
requires-python = ">=3.12"
dependencies = [
    "doktok-core",
    "doktok-contracts",
    "doktok-storage-postgres",
    "doktok-storage-filesystem",
    "doktok-modalities-files",
    "doktok-provider-ollama",
    "doktok-provider-paddleocr",
    "doktok-provider-projection",
]

[project.scripts]
doktok-worker = "doktok_worker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["doktok_worker"]
