[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-worker"
version = "0.2.0"
description = "DokTok NG ingestion worker"
requires-python = ">=3.12"
dependencies = [
    "doktok-core",
    "doktok-contracts",
    "doktok-storage-postgres",
    "doktok-storage-filesystem",
    "doktok-modalities-files",
    "doktok-provider-ollama",
    "doktok-provider-paddleocr",
    "doktok-provider-rapidocr",
    "doktok-provider-projection",
    # The worker imports doktok_provider_gliner directly (local NER + KAG relations). Declare it with
    # the [engine] extra (gliner + rapidfuzz) so the local backends install with the worker rather
    # than relying on the workspace root or a manual `make ner-models`.
    "doktok-provider-gliner[engine]",
]

[project.scripts]
doktok-worker = "doktok_worker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["doktok_worker"]
