[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-modalities-files"
version = "0.0.0"
description = "File modality handling (placeholder)"
requires-python = ">=3.12"
dependencies = ["doktok-contracts"]

[tool.hatch.build.targets.wheel]
packages = ["doktok_modalities_files"]
