[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-modalities-files"
version = "0.2.0"
description = "File modality handling"
requires-python = ">=3.12"
dependencies = [
    "doktok-contracts",
    "python-magic>=0.4.27",
    "pymupdf>=1.24",
    "pillow>=10",
]

[tool.hatch.build.targets.wheel]
packages = ["doktok_modalities_files"]
