[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-provider-gliner"
version = "0.1.0"
description = "Local GLiNER / NuNER named-entity recognition adapter for doktokNG (experimental)."
requires-python = ">=3.12"
# doktok-core: the relation adapter reuses the closed predicate vocabulary + NER name normalization
# (single source of truth). A provider depending on core is allowed (only core/contracts may not
# depend on providers); mirrors the OpenAI/Ollama relation adapters.
dependencies = ["doktok-contracts", "doktok-core"]

# Heavy runtime (torch via gliner) is opt-in, mirroring the OCR provider extras. Install with
# `make ner-models`. rapidfuzz is optional (fuzzy gazetteers). NER, NuNER, and GLiNER-Relex
# relations all run on base gliner's predict_entities - no gliner.multitask deps needed.
[project.optional-dependencies]
engine = ["gliner>=0.2.16", "rapidfuzz>=3.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["doktok_provider_gliner"]
