[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-provider-openai"
version = "0.1.0"
description = "OpenAI chat + structured-extraction adapters (cheap remote models)"
requires-python = ">=3.12"
dependencies = ["doktok-contracts", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["doktok_provider_openai"]
