[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-provider-rapidocr"
version = "0.1.0"
description = "RapidOCR (ONNX/OpenVINO) adapter for the OcrExtractor port"
requires-python = ">=3.12"
dependencies = ["doktok-contracts"]

# Heavy runtime deps kept optional so CI / default installs stay light; imported lazily.
# Enable on the worker host with: uv pip install rapidocr-onnxruntime pillow numpy
# (or rapidocr-openvino for the OpenVINO backend on Intel).
[project.optional-dependencies]
engine = ["rapidocr-onnxruntime>=1.3", "pillow>=10", "numpy>=1.26"]
openvino = ["rapidocr-openvino>=1.3", "openvino<2025"]

[tool.hatch.build.targets.wheel]
packages = ["doktok_provider_rapidocr"]
