[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-retrieval-hybrid"
version = "0.0.0"
description = "Hybrid retrieval (placeholder)"
requires-python = ">=3.12"
dependencies = ["doktok-contracts"]

[tool.hatch.build.targets.wheel]
packages = ["doktok_retrieval_hybrid"]
