[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-retrieval-hybrid"
version = "0.2.0"
description = "Hybrid retrieval (pgvector + Postgres full-text search)"
requires-python = ">=3.12"
dependencies = ["doktok-contracts", "doktok-storage-postgres", "psycopg>=3.2"]

[tool.hatch.build.targets.wheel]
packages = ["doktok_retrieval_hybrid"]
