[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-storage-filesystem"
version = "0.1.0"
description = "Local filesystem storage adapter"
requires-python = ">=3.12"
dependencies = ["doktok-contracts", "doktok-core"]

[tool.hatch.build.targets.wheel]
packages = ["doktok_storage_filesystem"]
