[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-storage-postgres"
version = "0.0.0"
description = "PostgreSQL adapters and migrations (placeholder)"
requires-python = ">=3.12"
dependencies = ["doktok-contracts"]

[tool.hatch.build.targets.wheel]
packages = ["doktok_storage_postgres"]
