[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doktok-tools-mcp"
version = "0.0.0"
description = "MCP tool surface (placeholder)"
requires-python = ">=3.12"
dependencies = ["doktok-contracts"]

[tool.hatch.build.targets.wheel]
packages = ["doktok_tools_mcp"]
